--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,6 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Resumogpt",
-  "$schema": "https://json.schemastore.org/chrome-manifest.json",
   "version": "0.1.0",
   "description": "My Chrome Extension",
   "icons": {
@@ -10,25 +9,26 @@
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
   "background": {
-    "service_worker": "background.js"
+    "scripts": ["background.js"],
+    "persistent": false
   },
   "action": {
     "default_title": "Resumogpt",
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage"
+    "activeTab",
+    "runtime"
   ],
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "run_at": "document_idle",
-      "js": [
-        "contentScript.js"
-      ]
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["contentScript.js"]
     }
   ]
 }
+
