--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ResumoGPT",
+  "name": "resumo-gpt",
   "version": "0.1.0",
   "description": "My Chrome Extension",
   "private": true,
