--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "webpack": "^5.85.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.9.0"
+  },
+  "dependencies": {
+    "@types/chrome": "^0.0.237",
+    "source-map-loader": "^4.0.1",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3"
   }
 }
