Add summary fetch via ChatGPT

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,9 @@
     "tabs",
     "contextMenus"
   ],
+  "host_permissions": [
+    "https://api.openai.com/*"
+  ],
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
