--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER: resumo
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: resumodb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres-data:/var/lib/postgresql/data
     ports:
@@ -15,12 +15,12 @@ services:
     build: ./server
     restart: always
     environment:
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_USER: resumo
-      DB_PASSWORD: secret
-      DB_NAME: resumodb
-      JWT_SECRET: example_jwt_secret
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      JWT_SECRET: ${JWT_SECRET}
     depends_on:
       - postgres
     ports:
