Add Sequelize and auto DB sync

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "sequelize": "^6.37.1",
+    "pg-hstore": "^2.3.4"
   }
 }
