--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "My Chrome Extension",
   "private": true,
   "scripts": {
-    "watch": "node ./node_modules/webpack/bin/webpack.js --mode=development --watch --config config/webpack.config.js",
-    "build": "node ./node_modules/webpack/bin/webpack.js --mode=production --config config/webpack.config.js"
+    "dev": "vite",
+    "build": "vite build"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.4",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.10.1",
     "size-plugin": "^2.0.2",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
     "webpack": "^5.85.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.9.0"
@@ -21,6 +24,6 @@
     "@types/chrome": "^0.0.237",
     "source-map-loader": "^4.0.1",
     "ts-loader": "^9.4.3",
-    "typescript": "^5.1.3"
+    "vue": "^3.5.16"
   }
 }
