--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.10.1",
+    "vue-loader": "^17.3.0",
     "size-plugin": "^2.0.2",
     "webpack": "^5.85.0",
     "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+    "@vue/compiler-sfc": "^3.4.21"
   },
   "dependencies": {
     "@types/chrome": "^0.0.237",
     "source-map-loader": "^4.0.1",
     "ts-loader": "^9.4.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   }
 }
