--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/compiler-sfc": "^3.4.21",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.10.1",
-    "vue-loader": "^17.3.0",
     "size-plugin": "^2.0.2",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
+    "vue-loader": "^17.3.0",
     "webpack": "^5.85.0",
     "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.9.0",
-    "@vue/compiler-sfc": "^3.4.21"
+    "webpack-merge": "^5.9.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@types/chrome": "^0.0.237",
+    "bootstrap": "^5.3.6",
+    "bootstrap-vue-3": "^0.5.1",
     "source-map-loader": "^4.0.1",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
