--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.10.1",
+    "sass": "^1.89.1",
     "size-plugin": "^2.0.2",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
