--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   api:
     build: ./server
     restart: always
+    command: npm run debug
     environment:
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
@@ -25,5 +26,6 @@ services:
       - postgres
     ports:
       - "3000:3000"
+      - "9229:9229"
 volumes:
   postgres-data:
