--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "debug": "node --inspect=0.0.0.0:9229 src/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
