Implement ready screen and automatic auth check

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -34,7 +34,8 @@
         "popup.js",
         "dashboard.html",
         "dashboard.js",
-        "contentScript.js"
+        "contentScript.js",
+        "ready.html"
       ],
       "matches": ["<all_urls>"]
     }
