--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
+    "@types/debug": "^4.1.12",
+    "@types/express": "^5.0.2",
+    "@types/ms": "^2.1.0",
+    "@types/sequelize": "^4.28.20",
+    "@types/validator": "^13.15.1",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/compiler-sfc": "^3.4.21",
     "copy-webpack-plugin": "^6.4.1",
@@ -31,6 +37,9 @@
     "@types/chrome": "^0.0.237",
     "bootstrap": "^5.3.6",
     "bootstrap-vue-3": "^0.5.1",
+    "cors": "^2.8.5",
+    "openai": "^5.1.1",
+    "sequelize": "^6.37.7",
     "source-map-loader": "^4.0.1",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
