--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app
-COPY package.json ./
-RUN npm install --production
+COPY package.json package-lock.json tsconfig.json ./
+RUN npm install
 COPY . ./
+RUN npm run build && npm prune --production
 CMD ["npm", "start"]
