--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,9 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "debug": "node --inspect=0.0.0.0:9229 src/index.js"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "debug": "node --inspect=0.0.0.0:9229 dist/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
