Improve script injection and permissions

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,8 +24,7 @@
     "scripting"
   ],
   "host_permissions": [
-    "https://api.openai.com/*",
-    "http://localhost:3000/*"
+    "<all_urls>"
   ],
   "web_accessible_resources": [
     {
@@ -35,7 +34,8 @@
         "dashboard.html",
         "dashboard.js",
         "contentScript.js",
-        "ready.html"
+        "ready.html",
+        "sidebar.css"
       ],
       "matches": ["<all_urls>"]
     }
