--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
-            "request": "attach",
-            "name": "Containers: Attach to Node",
+            "name": "Attach",
             "port": 9229,
-            "address": "localhost",
-            "localRoot": "${workspaceFolder}/server",
-            "remoteRoot": "/app",
+            "request": "attach",
+            "cwd": "${workspaceFolder}",
+            "type": "node",
             "sourceMaps": true,
             "outFiles": [
                 "${workspaceFolder}/server/dist/**/*.js"
             ],
-            "restart": true,
+            "remoteRoot": "/app/dist",
+            "localRoot": "${workspaceFolder}/server/dist"
         }
     ]
 }
