--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
@@ -30,7 +31,14 @@
     "vue-loader": "^17.3.0",
     "webpack": "^5.85.0",
     "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+    "@types/jest": "^29.5.8",
+    "@vue/vue3-jest": "^29.2.4",
+    "@vue/test-utils": "^2.4.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "ts-jest": "^29.1.1"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
