--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,16 @@
 {
   "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
+    "jsx": "preserve",
     "allowJs": true,
-    "target": "es5",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "types": ["bootstrap-vue-3"],
+    "lib": ["dom", "esnext"]
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
 }
