--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@popperjs/core": "^2.11.8",
     "@types/chrome": "^0.0.237",
     "bootstrap": "^5.3.6",
-    "bootstrap-vue-3": "^0.5.1",
+    "bootstrap-vue-next": "^0.30.1",
     "cors": "^2.8.5",
     "openai": "^5.1.1",
     "sequelize": "^6.37.7",
