--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "types": ["bootstrap-vue-3"],
+    "types": ["bootstrap-vue-next", "jest", "chrome"],
     "lib": ["dom", "esnext"]
   },
   "include": ["./src/**/*"],
