refactor: add tsyringe DI setup

--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "openai": "^5.1.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "tsyringe": "^4.8.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
