--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "debug": "node --inspect=0.0.0.0:9229 dist/server.js"
+    "debug": "node --inspect=0.0.0.0:9229 dist/server.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -31,6 +32,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^18.17.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/jest": "^29.5.8",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
