--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "debug": "node --inspect=0.0.0.0:9229 dist/server.js",
-    "test": "jest"
+    "test": "jest",
+    "migrate": "sequelize-cli db:migrate",
+    "migration:create": "sequelize-cli migration:generate --name"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -35,6 +37,8 @@
     "typescript": "^5.2.2",
     "@types/jest": "^29.5.8",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "sequelize-cli": "^6.6.1",
+    "umzug": "^3.3.1"
   }
 }
