--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       JWT_SECRET: ${JWT_SECRET}
+      APPLY_MIGRATIONS: ${APPLY_MIGRATIONS}
     depends_on:
       - postgres
     ports:
